NULL=
SUBDIRS = \
	config                      \
	sarl.test                   \
	sampledata                  

INCLUDES =                                              \
	-I$(srcdir) -I$(top_srcdir) 			\
	-I$(top_builddir)				\
        -I$(includedir)                                 \
	-I- -I..                                        \
	@CXXFLAGS@                                        

#noinst_PROGRAMS = \
#	ut_setget

#ut_setget_SOURCES = ut_setget.cpp
#ut_setget_LDADD   = -lpopt  @STLPORT_LIBS@ @LIBSTLDB4_LA@ 
#ut_setget_LDFLAGS =  @STLPORT_LIBS@ @LOKI_LIBS@ @FSTREAM_LIBS@

